@@ -395,6 +395,7 @@ DOCUMENTATION
 LANGUAGE BINDUNGS
 
 \begin{itemize}
+\item Upgrade to QuantLib-SWIG-1.29
 \item The SWIG wrapper has been extended to provide access to ORE input
   construction in memory and to query in-memory results (reports etc), in line
   with the refactoring mentioned below.
@@ -403,12 +404,13 @@ LANGUAGE BINDUNGS
   OS types and Python versions starting with this release, thanks to Eric Ehlers's
   effort and Luigi Ballabio's support to get in up and running using github actions.
   See the \href{https://github.com/OpenSourceRisk/ORE-SWIG#readme}{ORE-SWIG repository} for {\bf how to install the ORE module}.
-  \end{itemize}
+\end{itemize}
 
 \bigskip
 OTHER
 
 \begin{itemize}
+\item Upgrade to QuantLib-1.29
 \item Refactor the serialization of NPV cube and market cube (aggregation scenario data)
 \item Refactor OREAnalytics/orea/app by separating input construction from processing
   and persisting results. This is to faciliate re-using the processing element
